fixed moviedetails bug and overflow

--- a/src/components/usersWishlist/usersWishlist.css
+++ b/src/components/usersWishlist/usersWishlist.css
@@ -1,9 +1,19 @@
+.list-holder-main {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .list {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  width: 80%;
+  width: 90%;
   margin: 2rem auto;
+}
+
+.list-no-items {
+  display: block;
+  width: 90%;
 }
 
 /* titles */
@@ -25,11 +35,6 @@
   margin-left: 3rem;
 }
 
-.list-holder-main {
-  width: 90%;
-  margin: 0 auto;
-}
-
 /* item*/
 
 .wishlist-item-holder {
@@ -38,7 +43,7 @@
 
 .watched-message {
   position: absolute;
-  background: rgba(19, 19, 19, 0.452);
+  background: rgba(19, 19, 19, 0.692);
   text-align: center;
   top: 0;
   left: 0;
@@ -54,6 +59,22 @@
   font-size: 1.5rem;
   color: #ccc;
   padding-top: 10rem;
+}
+
+.watched-message button {
+  background: none;
+  color: #ccc;
+  padding: 0.5rem 1.5rem;
+  text-transform: capitalize;
+  font-size: 1rem;
+  margin: 0.5rem rem;
+  border: 2px solid #ccc;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.watched-message button:hover {
+  background: rgba(204, 204, 204, 0.199);
 }
 
 .wishlist-item-img-holder {
@@ -75,6 +96,15 @@
 .wishlist-iten-details {
   padding: 1.5rem 0;
   text-align: center;
+  color: rgb(214, 214, 214);
+}
+
+/* no items */
+
+.no-items-message {
+  padding: 3rem;
+  margin-left: 3rem;
+  font-size: 1.3rem;
   color: rgb(214, 214, 214);
 }
 
